@@ -1,0 +1,2 @@
+docs/logcheck-test.1
+debian/logcheck.8
