@@ -1,0 +1,2 @@
+docs/logtail.8
+docs/logtail2.8
